# SentinelAPI

./: .env.example  .gitignore  ADOPTION.md  Dockerfile  MANIFEST.in  Makefile  README.md  USAGE.md  deploy.sh  docker-compose.yml  pyproject.toml  sample-usage.md  teardown.sh
.github/workflows/: cleanup-ci-stacks.yml  deploy.yml  integration-tests.yml  release.yml
diagrams/: arch-diagram.mmd
env/: .env.cost-optimized  .env.production-grade
examples/example-api/: README.md  driver.sh  harden.py  infrakit-driver.sh  infrakit.yaml  tests.sh
examples/example-api/app/: main.py
examples/example-api/bare-api/: README.md
examples/example-api/bare-api/scripts/: deploy.sh
examples/example-api/bare-api/src/: handler.py
examples/example-api/scripts/: deploy.sh  destroy.sh
infrakit/: resource-spec.md
infrakit/templates/: sentinelapi-production.yaml
infrastructure/: README.md  deploy.py  infrakit-notes.md  teardown.py
infrastructure/cdk/: app.py
infrastructure/cdk/sentinel_cdk/: stack.py
infrastructure/templates/: foundation.yaml  full.yaml
lambda/anomaly_detector/: handler.py  requirements.txt
scripts/: anomaly_smoke.py  generate_jwt.py  publish_arch_diagram.sh  run-local.sh  smoke_aws.sh  test.sh
sdk_impl/: PARITY_CHECKLIST.md  README.md  deploy.py  deploy.sh  teardown.py  teardown.sh
src/sentinel_api/: __init__.py  config.py  main.py  sdk_deployer.py
src/sentinel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sentinel_api/models/: security.py
src/sentinel_api/services/: auth.py  dynamodb_rate_limiter.py  memory_rate_limiter.py  proxy.py  rate_limiter.py  rate_limiter_base.py  request_logger.py
templates/infrakit/: sentinelapi-minimal.yaml
tests/: test_anomaly_detector.py  test_auth.py  test_auth_routes.py  test_health.py  test_proxy_integration.py  test_rate_limiter_backends.py  test_request_logger.py  test_sdk_deployer.py
